# pictura

./: .baw  CHANGELOG  CHANGELOG.md  Dockerfile  Jenkinsfile  MANIFEST.in  Makefile  README  pyproject.toml  requirements.dev  requirements.txt  setup.py
.github/workflows/: release.yml  test.yml
docs/: index.rst
pictura/: __init__.py  data.py  detector.py  hasher.py
pictura_trained/: __init__.py
picture/: __init__.py  data.py  detector.py  hasher.py
picture_train/: simple
picture_trained/: __init__.py  simple
tests/: conftest.py  test_detector.py
trainer/: firstpage.py
