[build-system]
requires = [
    "setuptools>=82.0.1",
    "wheel>=0.47.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pictura"
version = "0.2.1"
description = ""
requires-python = ">=3.12"
authors = [
    { name = "Helmut Konrad Schewe", email = "helmutus@outlook.com" },
]
dependencies = [
    "utilo>=2.99.1,<3.0.0",
    "Pillow>=9.3.0,<10.0.0",
]
keywords = []
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
license = "MIT"
license-files = [
    "LICENSE",
]

[project.readme]
file = "README"
content-type = "text/markdown"

[project.optional-dependencies]
dev = [
    "utilotest==1.0.4",
    "hoverpower==1.5.1",
    "rawmaker==2.40.5",
    "gennex==1.0.3",
]

[project.urls]
Homepage = "https://github.com/anaticulae/pictura"
Repository = "https://github.com/anaticulae/pictura"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
]

[tool.semantic_release.changelog]
mode = "init"
output_format = "md"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG"

[tool.semantic_release.commit_parser_options]
patch_tags = [
    "build",
    "chore",
    "ci",
    "deps",
    "docs",
    "fix",
    "perf",
    "refactor",
    "style",
    "test",
]
minor_tags = [
    "feat",
]

[tool.setuptools.packages.find]
where = [
    ".",
]
include = [
    "picture",
    "picture_trained",
]
exclude = [
    "tests*",
]

[tool.hoverpower]
packages = [
    "HOME",
    "MASTER",
]
